lustre/obdclass/llog.c
@@ -772,10 +772,12 @@ int llog_process_or_fork(const struct lu_env *env,
 			 struct llog_handle *loghandle,
 			 llog_cb_t cb, void *data, void *catdata, bool fork)
 {
-        struct llog_process_info *lpi;
-        int                      rc;
+	struct llog_process_info *lpi;
+	struct llog_process_data *d = data;
+	struct llog_process_cat_data *cd = catdata;
+	int                      rc;
 
-        ENTRY;
+	ENTRY;
 
 	OBD_ALLOC_PTR(lpi);
 	if (lpi == NULL) {
@@ -787,6 +789,11 @@ int llog_process_or_fork(const struct lu_env *env,
 	lpi->lpi_cbdata    = data;
 	lpi->lpi_catdata   = catdata;
 
+	CDEBUG(D_OTHER, "Processing "DFID" flags 0x%03x startcat %d startidx %d first_idx %d last_idx %d\n",
+	       PFID(&loghandle->lgh_id.lgl_oi.oi_fid),
+	       loghandle->lgh_hdr->llh_flags, d ? d->lpd_startcat : -1,
+	       d ? d->lpd_startidx : -1, cd ? cd->lpcd_first_idx : -1,
+	       cd ? cd->lpcd_last_idx : -1);
 	if (fork) {
 		struct task_struct *task;
 
